feat: return muxi when list normal feat: createMessage and listMessage on gateway feat: return Domain to post feat: s.CreateMessage
